--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ireadtime",
-  "version": "1.2.5",
+  "version": "1.3.0",
   "description": "Website of ireadtime.com",
   "keywords": [
     "Blog",
@@ -35,7 +35,6 @@
     "build:zip": "bash ./scripts/zip.sh",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr": "node dist/server/server.mjs",
     "lint": "eslint \"src/**/*.{ts,html}\" --fix",
     "format": "prettier --write \"src/**/*.ts\"",
     "deploy": "bash ./scripts/deploy.sh",
@@ -44,16 +43,16 @@
     "cloc": "cloc --exclude-dir=.git,.idea,.vscode,node_modules,dist,test,package-lock.json,.angular,.github,.nx ."
   },
   "dependencies": {
-    "@angular/animations": "^19.2.14",
-    "@angular/common": "^19.2.14",
-    "@angular/compiler": "^19.2.14",
-    "@angular/core": "^19.2.14",
-    "@angular/forms": "^19.2.14",
-    "@angular/platform-browser": "^19.2.14",
-    "@angular/platform-browser-dynamic": "^19.2.14",
-    "@angular/platform-server": "^19.2.14",
-    "@angular/router": "^19.2.14",
-    "@angular/ssr": "^19.2.15",
+    "@angular/animations": "^20.1.0",
+    "@angular/common": "^20.1.0",
+    "@angular/compiler": "^20.1.0",
+    "@angular/core": "^20.1.0",
+    "@angular/forms": "^20.1.0",
+    "@angular/platform-browser": "^20.1.0",
+    "@angular/platform-browser-dynamic": "^20.1.0",
+    "@angular/platform-server": "^20.1.0",
+    "@angular/router": "^20.1.0",
+    "@angular/ssr": "^20.1.0",
     "@fuyun/feed": "^1.0.0",
     "express": "^4.21.2",
     "highlight.js": "^11.11.1",
@@ -61,24 +60,24 @@
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "murmurhash": "^2.0.1",
-    "ng-zorro-antd": "^19.3.1",
+    "ng-zorro-antd": "^20.0.0",
     "ngx-clipboard": "^16.0.0",
     "rxjs": "^7.8.2",
     "sitemap": "^8.0.0",
-    "tslib": "^2.3.0",
-    "ua-parser-js": "^2.0.3",
+    "tslib": "^2.8.1",
+    "ua-parser-js": "^2.0.4",
     "zone.js": "^0.15.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^19.2.15",
-    "@angular/cli": "^19.2.15",
-    "@angular/compiler-cli": "^19.2.14",
+    "@angular/build": "^20.1.0",
+    "@angular/cli": "^20.1.0",
+    "@angular/compiler-cli": "^20.1.0",
     "@types/express": "^4.17.23",
     "@types/jasmine": "^5.1.8",
-    "@types/lodash": "^4.17.18",
-    "@types/node": "^22.15.32",
+    "@types/lodash": "^4.17.20",
+    "@types/node": "^22.16.2",
     "@types/ua-parser-js": "^0.7.39",
-    "eslint": "^9.29.0",
+    "eslint": "^9.30.1",
     "eslint-config-prettier": "^10.1.5",
     "gulp": "^4.0.2",
     "gulp-gzip": "^1.4.2",
@@ -88,8 +87,9 @@
     "karma-coverage": "^2.2.1",
     "karma-jasmine": "^5.1.0",
     "karma-jasmine-html-reporter": "^2.1.0",
-    "prettier": "^3.6.0",
+    "less": "^4.3.0",
+    "prettier": "^3.6.2",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.34.1"
+    "typescript-eslint": "^8.36.0"
   }
 }
