--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ireadtime",
-  "version": "1.3.0",
+  "version": "1.3.1",
   "description": "Website of ireadtime.com",
   "keywords": [
     "Blog",
@@ -39,20 +39,20 @@
     "format": "prettier --write \"src/**/*.ts\"",
     "deploy": "bash ./scripts/deploy.sh",
     "deploy:local": "bash ./scripts/deploy-local.sh",
-    "deploy:manual": "bash ./scripts/deploy-manual.sh",
+    "deploy:zip": "bash ./scripts/deploy-manual.sh",
     "cloc": "cloc --exclude-dir=.git,.idea,.vscode,node_modules,dist,test,package-lock.json,.angular,.github,.nx ."
   },
   "dependencies": {
-    "@angular/animations": "^20.1.0",
-    "@angular/common": "^20.1.0",
-    "@angular/compiler": "^20.1.0",
-    "@angular/core": "^20.1.0",
-    "@angular/forms": "^20.1.0",
-    "@angular/platform-browser": "^20.1.0",
-    "@angular/platform-browser-dynamic": "^20.1.0",
-    "@angular/platform-server": "^20.1.0",
-    "@angular/router": "^20.1.0",
-    "@angular/ssr": "^20.1.0",
+    "@angular/animations": "^20.1.4",
+    "@angular/common": "^20.1.4",
+    "@angular/compiler": "^20.1.4",
+    "@angular/core": "^20.1.4",
+    "@angular/forms": "^20.1.4",
+    "@angular/platform-browser": "^20.1.4",
+    "@angular/platform-browser-dynamic": "^20.1.4",
+    "@angular/platform-server": "^20.1.4",
+    "@angular/router": "^20.1.4",
+    "@angular/ssr": "^20.1.4",
     "@fuyun/feed": "^1.0.0",
     "express": "^4.21.2",
     "highlight.js": "^11.11.1",
@@ -60,7 +60,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "murmurhash": "^2.0.1",
-    "ng-zorro-antd": "^20.0.0",
+    "ng-zorro-antd": "^20.1.0",
     "ngx-clipboard": "^16.0.0",
     "rxjs": "^7.8.2",
     "sitemap": "^8.0.0",
@@ -69,27 +69,27 @@
     "zone.js": "^0.15.1"
   },
   "devDependencies": {
-    "@angular/build": "^20.1.0",
-    "@angular/cli": "^20.1.0",
-    "@angular/compiler-cli": "^20.1.0",
+    "@angular/build": "^20.1.4",
+    "@angular/cli": "^20.1.4",
+    "@angular/compiler-cli": "^20.1.4",
     "@types/express": "^4.17.23",
     "@types/jasmine": "^5.1.8",
     "@types/lodash": "^4.17.20",
-    "@types/node": "^22.16.2",
+    "@types/node": "^24.2.0",
     "@types/ua-parser-js": "^0.7.39",
-    "eslint": "^9.30.1",
-    "eslint-config-prettier": "^10.1.5",
+    "eslint": "^9.32.0",
+    "eslint-config-prettier": "^10.1.8",
     "gulp": "^4.0.2",
     "gulp-gzip": "^1.4.2",
-    "jasmine-core": "^5.8.0",
+    "jasmine-core": "^5.9.0",
     "karma": "^6.4.4",
     "karma-chrome-launcher": "^3.2.0",
     "karma-coverage": "^2.2.1",
     "karma-jasmine": "^5.1.0",
     "karma-jasmine-html-reporter": "^2.1.0",
-    "less": "^4.3.0",
+    "less": "^4.4.0",
     "prettier": "^3.6.2",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.36.0"
+    "typescript-eslint": "^8.38.0"
   }
 }
